--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "socket.io-client": "4.7.5",
     "stats.js": "0.17.0",
     "three": "0.152.2",
+    "tsparticles": "3.4.0",
+    "tsparticles-slim": "2.12.0",
     "vue": "3.2.47",
+    "vue3-particles": "2.12.0",
     "vuetify": "3.1.14"
   },
   "devDependencies": {
