--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         ssh -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 
         cd /srv/WebFps
-        docker-compose down
+        docker compose down
         find /srv/WebFps -mindepth 1 -delete
 
     - name: Copy files via SCP
@@ -33,5 +33,5 @@ jobs:
       run: |
         ssh -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 
         cd /srv/WebFps
-        docker-compose down
-        docker-compose up -d --build
+        docker compose down
+        docker compose up -d --build
