--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Stop docker and remove existing /srv/WebFps directory
       run: |
-        ssh -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 
+        ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 
         cd /srv/WebFps
         docker compose down
         find /srv/WebFps -mindepth 1 -delete
@@ -31,7 +31,7 @@ jobs:
 
     - name: Deploy
       run: |
-        ssh -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 
+        ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 
         cd /srv/WebFps
         docker compose down
         docker compose up -d --build
