Edit docker compose

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,7 @@ jobs:
 
     - name: Stop docker and remove existing /srv/WebFps directory
       run: |
-        ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 
-        cd /srv/WebFps
-        docker compose down
-        find /srv/WebFps -mindepth 1 -delete
+        ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.SERVER_IP }} 'find /srv/WebFps -mindepth 1 -delete'
 
     - name: Copy files via SCP
       run: |
